--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <body>
     <h1>RESUME</h1>
     <hr>
-     <img src="./images/pic.jpg" alt=""
+     <img src="pic.jpg" alt=""
     width="200px">
     
     
