--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             background-color: rgb(90, 160, 90);
             text-align: center;
             font-weight: 100;
+            padding: 10px;
         }
         h2{
             text-align: center;
@@ -36,6 +37,11 @@
             text-align: center;
             background-color: rgb(123, 219, 123);
             padding: 10px;
+        }
+         a{
+            color: rgb(108, 17, 192);
+            font-weight: bold;
+            margin: 10px;
         }
         
 
